--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,5 @@
-pandoc: 3.1.6
-pkgdown: 2.0.7
+pandoc: '3.5'
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2023-08-25T01:10Z
-
+last_built: 2025-03-26T22:09Z
